# gaen

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS.org  LICENSE  README.md  README.org  bootstrap.bat  bootstrap.sh  clean.bat  clean.sh  input.conf
python/templates/project/: .gitattributes  .gitignore  CMakeLists.txt  bootstrap.bat  bootstrap.sh  clean.sh  gaen_project.info
python/templates/project/src/: CMakeLists.txt
src/: CMakeLists.txt
src/assets/: AssetType.h  AssetTypeGspr.cpp  AssetTypeGspr.h  AssetTypes.cpp  AssetTypes.h  CMakeLists.txt  Color.h  Config.cpp  Config.h  Gatl.cpp  Gatl.h  Gfnt.cpp  Gfnt.h  Gimg.cpp  Gimg.h  Gspr.cpp  Gspr.h  file_utils.cpp  file_utils.h  file_utils_win32.cpp
src/cara/: CMakeLists.txt  Cara.cpp  Cara.h  cara.cpp  cara.h  stdafx.cpp  stdafx.h
src/chef/: CMakeLists.txt  Chef.cpp  Chef.h  CookInfo.cpp  CookInfo.h  CookerRegistry.cpp  CookerRegistry.h  Tga.cpp  Tga.h  cooker_utils.cpp  cooker_utils.h  cookers.cpp  cookers.h  main_chef.cpp  stdafx.cpp  stdafx.h
src/cmpc/: CMakeLists.txt  main_cmpc.cpp
src/cmpc/test_programs/: prog0.cmp
src/compc/: CMakeLists.txt  main_compc.cpp
src/compc/test_programs/: prog0.cmp  prog1.cmp  prog2.cmp
src/compose/: CMakeLists.txt  Program.cpp  Program.h  PropsAndFields.cpp  PropsAndFields.h  build.bat  build.sh  codegen_cpp.cpp  codegen_cpp.h  codegen_utils.cpp  codegen_utils.h  comp_mem.cpp  comp_mem.h  comp_string.cpp  comp_string.h  compiler.cpp  compiler.h  compiler_structs.h  compiler_utils.h  compose.l  compose.y  compose_parser.c  compose_parser.h  compose_parser.output  compose_scanner.c  compose_scanner.h  opcode.h  parser.c  parser.cpp  parser.h  scandata.h  scanner.c  scanner.h  system_api_meta.cpp  system_api_meta.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  Color.h  Config.cpp  Config.h  HashMap.h  HashSet.h  List.h  Map.h  RefCounted.h  Set.h  SpscRingBuffer.h  String.h  ThreadLocal.h  Vector.h  base_defines.cpp  base_defines.h  gamevars.cpp  gamevars.h  geometry.h  hashing.cpp  hashing.h  log_message.h  logging.cpp  logging.h  math.cpp  math.h  mem.cpp  mem.h  platutils.cpp  platutils.h  platutils_ios.cpp  platutils_osx.cpp  platutils_win32.cpp  shapes.cpp  shapes.h  sockets.cpp  sockets.h  sockets_posix.cpp  sockets_win32.cpp  stdafx.cpp  (+4 more)
src/engine/: Asset.cpp  Asset.h  AssetGspr.cpp  AssetGspr.h  AssetLoader.cpp  AssetLoader.h  AssetMgr.cpp  AssetMgr.h  AssetType.h  AssetTypes.cpp  AssetTypes.h  AssetWithDep.h  Block.h  BlockData.h  BlockMemory.cpp  BlockMemory.h  CMakeLists.txt  CmpString.cpp  CmpString.h  Color.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityInit.h  FrameTime.h  Handle.cpp  Handle.h  HandleMgr.cpp  HandleMgr.h  ImageBuffer.cpp  ImageBuffer.h  InputMgr.cpp  InputMgr.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Message.h  MessageAccessor.h  (+59 more)
src/engine/Components/: ModelComponent.cpp  ModelComponent.h  components.cmake
src/engine/components/: ModelComponent.cpp  ModelComponent.h  components.def
src/engine/message_defs/: ModelInstanceIdMessage.h  ModelInstanceMessage.h  TaskMessage.h  messages.cmake  messages.def
src/engine/message_helpers/: BaseMsg.h  ModelInstanceMsg.h  TaskMsg.h
src/engine/messages/: Asset.h  Handle.h  InsertComponent.h  InsertLightDirectional.h  InsertLightDistant.h  InsertModelInstance.h  InsertModelInstanceMessage.h  InsertTask.h  InsertTaskMessage.h  ModelInstanceMessage.h  MouseMove.h  MoveCamera.h  MoveFpsCamera.h  RegisterInputStateListener.h  ReleaseAsset.h  RemoveModelInstance.h  RemoveModelInstanceMessage.h  TaskMessage.h  TaskStatus.h  Transform.h  TransformId.h  UpdateLightDirectional.h  WatchInputState.h  WatchMouse.h  messages.cmake  messages.def
src/engine/property_defs/: properties.cmake  properties.def
src/gac/: CMakeLists.txt  main_gac.cpp
src/gaen/: CMakeLists.txt  MainMenu.xib  gaen.cpp  gaen.h  gaenInfo.plist  main_osx.mm  main_win32.cpp
src/gaen/gaenios/: .gitignore
src/gaen/gaenios/gaenios.xcodeproj/: project.pbxproj
src/hashes/: CMakeLists.txt
src/renderergl/: CMakeLists.txt  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererGL.cpp  RendererGL.h  RendererGL_ios.mm  RendererGL_osx.cpp  RendererGL_osx.mm  RendererGL_win32.cpp  RendererMesh.cpp  RendererMesh.h  RendererProto.cpp  RendererProto.h  Renderer_ios.mm  Renderer_osx.mm  Renderer_win32.cpp  ShaderRegistry.cpp  ShaderRegistry.h  SpriteGL.cpp  SpriteGL.h  gaen_opengl.h  renderer_api.cpp  stdafx.cpp  stdafx.h  win32gl.cpp  win32gl.h
src/renderergl/shaders/: Shader.cpp  Shader.h  ShaderRegistry_codegen.cpp  codegen.cmake  compute_present.cpp  compute_present.h  compute_present.shd  compute_present.shf  compute_present.shv  compute_test.cpp  compute_test.h  compute_test.shc  compute_test.shd  faceted.cpp  faceted.h  faceted.shd  faceted.shf  faceted.shv  present_texture.cpp  present_texture.h  present_texture.shd  present_texture.shf  present_texture.shv  sprite.cpp  sprite.h  sprite.shd  sprite.shf  sprite.shv  voxel27.cpp  voxel27.h  voxel27.shd  voxel27.shf  voxel27.shv  voxel_cast.cpp  voxel_cast.h  voxel_cast.shc  voxel_cast.shd  voxel_cast_frag.cpp  voxel_cast_frag.h  voxel_cast_frag.shd  (+2 more)
src/samples/: CMakeLists.txt  stdafx.cpp  stdafx.h
src/samples/model_viewer/: model_viewer.cpp  model_viewer.h
src/scripts/: CMakeLists.txt  DUMMY.cpp  codegen.cmake  license.txt  registration.cpp
src/scripts/cmp/: init.cmp  lights.cmp  shapes.cmp  start.cmp  test.cmp  utils.cmp
src/scripts/cpp/: init.cpp  lights.cpp  shapes.cpp  start.cpp  test.cpp  utils.cpp
src/shader_gen/: CMakeLists.txt  glutils.h  glutils_win32.cpp  shader_gen.cpp
src/unit_tests/: BaseFixture.h  CMakeLists.txt  main_testcore.cpp  test_blockmemory.cpp  test_gamevars.cpp  test_gamevars_aux.cpp  test_math.cpp  test_mem.cpp  test_ringbuffers.cpp  test_task.cpp
src/unit_tests/core/: BaseFixture.h  CMakeLists.txt  main_testcore.cpp  test_gamevars.cpp  test_gamevars_aux.cpp  test_math.cpp  test_mem.cpp  test_ringbuffers.cpp
src/unit_tests/engine/: CMakeLists.txt  main_testengine.cpp  test_blockmemory.cpp  test_math.cpp  test_task.cpp
(+108 files in other folders)
